@@ -996,6 +996,10 @@ SOURCE=..\win32\exultico.rc
 # ADD BASE RSC /l 0xc09 /i "\UC\exult\win32"
 # ADD RSC /l 0xc09 /i "\UC\exult\win32" /i "..\win32"
 # End Source File
+# Begin Source File
+
+SOURCE=..\version.cc
+# End Source File
 # End Group
 # Begin Group "Header Files"
 
@@ -1656,6 +1660,10 @@ SOURCE=..\data\exult_flx.h
 # Begin Source File
 
 SOURCE=..\data\exult_si_flx.h
+# End Source File
+# Begin Source File
+
+SOURCE=..\version.h
 # End Source File
 # End Group
 # Begin Group "Resource Files"
